# anydrop

./: .gitignore  .prettierignore  .prettierrc.js  Cargo.toml  README.md  package.json
.github/workflows/: rc.yml
.learnings/: ERRORS.md
apps/desktop-tauri/: index.html  package.json  vite.config.ts
apps/desktop-tauri/src/: App.tsx  main.tsx  styles.scss
apps/desktop-tauri/src-tauri/: Cargo.toml  installer.nsh  tauri.conf.json  tauri.macos.conf.json
apps/desktop-tauri/src-tauri/capabilities/: default.json
apps/desktop-tauri/src-tauri/icons/: icon.icns
apps/desktop-tauri/src-tauri/nsis/: installer.nsh
apps/desktop-tauri/src-tauri/src/: lib.rs  main.rs
core/: Cargo.toml  Makefile  README.md
core/bridge/: bridge.h
core/proto/: discovery_packet.proto
core/src/: lib.rs  lib_generic.rs  lib_util.rs
core/src/compatibility/: unified_endian.rs
core/src/extension/: ip_to_u32.rs
core/src/network/: peer.rs
core/src/packet/: data_packet.rs  data_transmission.rs  mod.rs
core/src/packet/data/: file_coming_packet.rs  file_part_packet.rs  file_part_response_packet.rs  file_receive_response_packet.rs  image_packet.rs  magic_numbers.rs  mod.rs  text_packet.rs
core/src/packet/protocol/: serialize.rs
core/src/proto/: discovery_packet.rs
core/src/service/: anydrop_service.rs  data_service.rs  discovery_service.rs  mdns_discovery.rs  mod.rs
core/src/service/context/: data_service_context.rs  mod.rs
core/src/service/handler/: context.rs  file_coming_packet_handler.rs  file_part_packet_handler.rs  file_part_response_packet_handler.rs  file_receive_response_packet_handler.rs  image_packet_handler.rs  mod.rs  text_packet_handler.rs
core/src/transfer/: cert.rs  client.rs  mod.rs  protocol.rs  server.rs
core/src/transfer_v2/: cert.rs  client.rs  protocol.rs  server.rs  walk.rs
core/src/util/: network.rs
core/tests/: main.rs  test_data_packet.rs  test_discovery_packet.rs  test_discovery_service.rs  test_file_coming_packet.rs  test_file_part_packet.rs  test_file_receive_response_packet.rs  test_peer.rs  test_socket_addr_tostring.rs  test_text_packet.rs  test_unified_endian.rs
docs/: BACKEND_REMOVAL.md  CORE_REFACTOR_PLAN.md
reference/: README.md
reference/macos-swiftui/: AirXmac-Info.plist  Podfile  README.md
reference/macos-swiftui/AirX/: AirXApp.swift  AppDelegate.swift
reference/macos-swiftui/AirX/Bridge/: AirXBridge.h  AirXWrapper.m  SwiftUIPractice-Bridging-Header.h  UnsafeString.swift
reference/macos-swiftui/AirX/Data/: BlockingQueue.swift
reference/macos-swiftui/AirX/Enum/: CredentialType.swift  FileSendingStatus.swift  ThemeMode.swift
reference/macos-swiftui/AirX/Extension/: FileHandleEnsureLength.swift  StringFromLengthenPointer.swift  StringHash.swift  Versions.swift  ViewWrapContent.swift
reference/macos-swiftui/AirX/Model/: Message.swift  Peer.swift  ReceiveFile.swift
reference/macos-swiftui/AirX/Service/: AirXCloud.swift  AirXService.swift  WebSocketService.swift
reference/macos-swiftui/AirX/Util/: AccountUtils.swift  Defaults.swift  FileUtils.swift  ThemeUtils.swift  UIUtils.swift
reference/macos-swiftui/AirX/View/: AboutView.swift  ControlPanelView.swift  FileNoticeView.swift  LoginView.swift  PeerPickerView.swift  TextNoticeView.swift
reference/macos-swiftui/AirX/ViewModel/: GlobalState.swift  TextNoticeViewModel.swift
reference/macos-swiftui/AirX/Window/: FileNoticeWindow.swift  PeerPickerWindow.swift
reference/macos-swiftui/AirX/Worker/: FileWriterWorker.swift
reference/macos-swiftui/AirXmac.xcodeproj/: project.pbxproj
reference/macos-swiftui/AirXmac.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
reference/macos-swiftui/AirXmac.xcworkspace/: contents.xcworkspacedata
reference/macos-swiftui/AirXmacTests/: SwiftUIPracticeTests.swift
reference/macos-swiftui/AirXmacUITests/: SwiftUIPracticeUITests.swift  SwiftUIPracticeUITestsLaunchTests.swift
reference/windows-winui/: .claudiaideconfig  AirX.sln  README.md  README.zh.md
reference/windows-winui/.github/ISSUE_TEMPLATE/: bug-report---bug-反馈.md  feature-request---提出建议.md
reference/windows-winui/AirX/: AirX.csproj  App.xaml  App.xaml.cs  NativeMethods.txt  RatingControl.cs  RelayCommand.cs  app.manifest
reference/windows-winui/AirX (Package)/: AirX (Package).wapproj  Package.appxmanifest
reference/windows-winui/AirX/Assets/: sign-in.html
reference/windows-winui/AirX/Bridge/: AirXBridge.cs  AirXNative.cs
reference/windows-winui/AirX/Converters/: BooleanInvertionConverter.cs  BooleanToOnlineStatusDescriptionConverter.cs  BooleanToVisibilityConverter.cs  (+15 more)
(+75 files in other folders)
