[package]
name = "anydrop"
version = "0.1.0"
edition = "2021"
authors = ["Zhen Guan", "Shijunyi Liu", "Jiabao Guo", "Chang Guan"]
description = "Core library of AnyDrop, the fast, reliable and lightweight sync tool."

[dependencies]
local-ip-address = "0.5.4"
log = "0.4"
log4rs = "=1.2.0"
hostname = "^0.3"
protobuf = "=3.3.0"
libc = "0.2.147"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
name = "anydrop"
