[package]
name = "anydrop"
version = "0.1.0"
edition = "2021"
authors = ["Zhen Guan", "Shijunyi Liu", "Jiabao Guo", "Chang Guan"]
description = "Core library of AnyDrop, the fast, reliable and lightweight sync tool."

[dependencies]
local-ip-address = "0.5.4"
log = "0.4"
log4rs = "=1.2.0"
hostname = "^0.3"
protobuf = "=3.3.0"
libc = "0.2.147"

# mDNS / DNS-SD discovery, layered on top of the existing UDP broadcast to
# maximize LAN discovery success rate (and to let other Bonjour-aware tools
# see AnyDrop).
mdns-sd = "0.12"
# Enumerate local interfaces (with netmasks) so we can rank candidate peer
# IPs by same-subnet reachability before falling back to a TCP probe.
if-addrs = "0.13"

# transfer_v2: QUIC-based file/folder transfer
quinn = { version = "0.11", default-features = false, features = ["ring", "rustls", "runtime-tokio", "log"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.13"
rustls-pki-types = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "net", "sync", "fs", "time"] }
# CancellationToken — used for graceful cancel/pause of in-flight transfers.
tokio-util = "0.7"
# PNG encode/decode for clipboard image sync.  `image` crate is heavier than
# raw `png` but gives us format flexibility (TIFF/JPEG decode if the
# clipboard yields them on macOS) for not much more code.
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
rand = "0.8"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
name = "anydrop"
