[package]
name = "anydrop-desktop-tauri"
version = "0.1.0"
description = "AnyDrop Tauri desktop app"
authors = ["AnyDrop"]
edition = "2021"

[lib]
name = "anydrop_desktop_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
anydrop = { path = "../../../core" }
arboard = "3.4.1"
dirs = "5.0.1"
open = "5.3.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.5.1", features = ["tray-icon"] }
tauri-plugin-dialog = "2.2.1"
tauri-plugin-opener = "2.2.6"
